# approximation

./: CMakeLists.txt  Program.cs  README.md  approximation.Designer.cs  approximation.cs  approximation.csproj  approximation.resx
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
